--- a/index.html
+++ b/index.html
@@ -125,6 +125,110 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <h2>About Us</h2>
+        <p>
+          The model offers a framework for discussing problems related to the
+          user's experience, as well as possible ways and means of solving them.
+          Application development begins at the top level (strategy), where the
+          future software product is described quite abstractly from the point
+          of view of the expectations of both users and the customer.
+        </p>
+        <ul>
+          <li>
+            <h3>800</h3>
+            <p>Pupils</p>
+          </li>
+          <li>
+            <h3>18</h3>
+            <p>Teachers</p>
+          </li>
+          <li>
+            <h3>6</h3>
+            <p>Foreign languages</p>
+          </li>
+        </ul>
+        <img
+          src="./images/business-competition-bro.png"
+          alt="People climb the mountain"
+          width="540"
+          height="540"
+        />
+      </section>
+
+      <section>
+        <h2>Pricing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/online.png"
+              alt="Online education"
+              width="426"
+              height="320"
+            />
+            <h3>Self-study online course</h3>
+            <p>
+              Start learning English online in live classes with qualified EC
+              teachers and students from all over the world.
+            </p>
+            <span>&#163;5.99</span>
+            <span>per month</span>
+          </li>
+          <li>
+            <img
+              src="./images/lesson.png"
+              alt="Offline lessons"
+              width="426"
+              height="320"
+            />
+            <h3>Live online classes</h3>
+            <p>
+              Interactive group classes with expert teachers. Free 7-day trial
+            </p>
+            <span>&#163;12.99</span>
+            <span>per month</span>
+          </li>
+          <li>
+            <img
+              src="./images/webinar.png"
+              alt="Webinares"
+              width="426"
+              height="320"
+            />
+            <h3>Personal Tuition</h3>
+            <p>
+              Online one-to-one English tutoring – enjoy our first session for
+              only $1
+            </p>
+            <span>&#163;12.99</span>
+            <span>per month</span>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <img src="./images/contact.png" alt="Boy launching a paper plane" />
+        <h2>Contact Us</h2>
+        <p>
+          Discover your current English level by taking our free online English
+          test. Sign up to our newsletter for learning tips and free resources
+        </p>
+        <form action="">
+          <input type="submit" name="e-mail" value="Enter Your E-mail" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
     </main>
+    <footer>
+      <a href=""> <span>Brit</span><span>lex</span> </a>
+      <nav>
+        <ul>
+          <li><a href=""></a>Terms and Conditions</li>
+          <li><a href=""></a>Privacy Policy</li>
+          <li><a href=""></a>Cookie Policy</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
