Fixed header and footer

--- a/index.html
+++ b/index.html
@@ -18,18 +18,30 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="/">Britlex</a>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Skills</li>
-          <li>About Us</li>
-          <li>Pricing</li>
-          <li>Contacts</li>
-        </ul>
-      </nav>
-      <button class="button">Let’s Talk</button>
+    <header class="header">
+      <div class="container">
+        <a href="/" class="header-logo">Britlex</a>
+        <nav>
+          <ul class="header-menu">
+            <li class="header-menu-item">
+              <a href="#" class="header-menu-link">Home</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#" class="header-menu-link">Skills</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#" class="header-menu-link">About Us</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#" class="header-menu-link">Pricing</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#" class="header-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <button type="button" class="header-button">Let’s Talk</button>
+      </div>
     </header>
 
     <main>
@@ -220,15 +232,26 @@
         </form>
       </section>
     </main>
-    <footer>
-      <a href=""> <span>Brit</span><span>lex</span> </a>
-      <nav>
-        <ul>
-          <li><a href=""></a>Terms and Conditions</li>
-          <li><a href=""></a>Privacy Policy</li>
-          <li><a href=""></a>Cookie Policy</li>
-        </ul>
-      </nav>
+
+    <footer class="footer">
+      <div class="container">
+        <a href="#">
+          <p class="footer-logo">Brit<span class="accent">lex</span></p>
+        </a>
+        <nav>
+          <ul class="footer-menu">
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">Terms and Conditions</a>
+            </li>
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">Privacy Policy</a>
+            </li>
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">Cookie Policy</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </footer>
   </body>
 </html>
