--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <h1>Learn Any Foreign Language</h1>
         <p>
           With our teachers who write a program for each student, you will be
@@ -59,7 +59,7 @@
           height="510"
         />
       </section>
-      <section>
+      <section class="section">
         <h2>Skills</h2>
         <ul>
           <li>
@@ -138,7 +138,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section">
         <h2>About Us</h2>
         <p>
           The model offers a framework for discussing problems related to the
@@ -169,7 +169,7 @@
         />
       </section>
 
-      <section>
+      <section class="section">
         <h2>Pricing</h2>
         <ul>
           <li>
@@ -219,7 +219,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section">
         <img src="./images/contact.png" alt="Boy launching a paper plane" />
         <h2>Contact Us</h2>
         <p>
