--- a/index.html
+++ b/index.html
@@ -45,97 +45,125 @@
     </header>
 
     <main>
-      <section class="section">
-        <h1>Learn Any Foreign Language</h1>
-        <p>
-          With our teachers who write a program for each student, you will be
-          able to make your first sketch after the first lesson.
-        </p>
-        <button class="button">Get started</button>
-        <img
-          src="./images/learning-languages.png"
-          alt="People sais Hello in different language"
-          width="654"
-          height="510"
-        />
+      <section class="hero-section">
+        <div class="container">
+          <div class="hero-left-part">
+            <h1 class="hero-title">
+              Learn <br />
+              Any Foreign <br />
+              Language
+            </h1>
+            <p class="hero-text">
+              With our teachers who write a program for each student, you will
+              be able to make your first sketch after the first lesson.
+            </p>
+            <button type="button" class="hero-button">Get started</button>
+          </div>
+
+          <img
+            src="./images/learning-languages.png"
+            alt="People sais Hello in different language"
+            width="654"
+            height="510"
+          />
+        </div>
       </section>
       <section class="section">
-        <h2>Skills</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/shared-goals-bro.png"
-              alt="People speaking"
-              width="390"
-              height="390"
-            />
-            <h3>Speaking</h3>
-            <p>
-              Improve your English skills and confidence. Live classes and
-              interactive lessons online. 20% extra free for a limited time only
-            </p>
-            <p>
-              Learn English online and improve your skills through our
-              high-quality courses and resources – all designed for adult
-              language learners.
-            </p>
-            <details>
-              <summary>Learn more</summary>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </details>
-          </li>
-          <li>
-            <img
-              src="./images/typewriter-bro.png"
-              alt="People typing"
-              width="390"
-              height="264"
-            />
-            <h3>Writing</h3>
-            <p>
-              One of the most important and extensive areas of natural science,
-              the science that studies substances, also their composition
-            </p>
-            <details>
-              <summary>Learn more</summary>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </details>
-          </li>
-          <li>
-            <img
-              src="./images/house-bookshelves-bro.png"
-              alt="People reading"
-              width="390"
-              height="390"
-            />
-            <h3>Reading</h3>
-            <p>
-              Improve your English skills and confidence. Live classes and
-              interactive lessons online. 20% extra free for a limited time only
-            </p>
-            <details>
-              <summary>Learn more</summary>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </details>
-          </li>
-          <li>
-            <h3>Listening</h3>
-            <p>
-              Improve your English skills and confidence. Live classes and
-              interactive lessons online. 20% extra free for a limited time only
-            </p>
-            <details>
-              <summary>Learn more</summary>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </details>
-            <img
-              src="./images/podcast-audience-bro.png"
-              alt="People speaking"
-              width="408"
-              height="274"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="skills-title">Skills</h2>
+          <ul class="skills-list">
+            <li class="skills-item">
+              <img
+                src="./images/shared-goals-bro.png"
+                alt="People speaking"
+                width="390"
+                height="390"
+                class="skills-item-img"
+              />
+              <h3 class="skills-item-title">Speaking</h3>
+              <p class="skills-item-text">
+                Improve your English skills and confidence. Live classes and
+                interactive lessons online. 20% extra free for a limited time
+                only
+                <br />
+                <br />
+                Learn English online and improve your skills through our
+                high-quality courses and resources – all designed for adult
+                language learners.
+              </p>
+              <details class="skills-detail">
+                <summary>Learn more</summary>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              </details>
+            </li>
+
+            <div class="skill-right">
+              <div class="skills-top-right">
+                <li class="skills-item">
+                  <img
+                    src="./images/typewriter-bro.png"
+                    alt="People typing"
+                    width="390"
+                    height="264"
+                  />
+                  <h3>Writing</h3>
+                  <p>
+                    One of the most important and extensive areas of natural
+                    science, the science that studies substances, also their
+                    composition
+                  </p>
+                  <details>
+                    <summary>Learn more</summary>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </p>
+                  </details>
+                </li>
+                <li class="skills-item">
+                  <img
+                    src="./images/house-bookshelves-bro.png"
+                    alt="People reading"
+                    width="390"
+                    height="390"
+                  />
+                  <h3>Reading</h3>
+                  <p>
+                    Improve your English skills and confidence. Live classes and
+                    interactive lessons online. 20% extra free for a limited
+                    time only
+                  </p>
+                  <details>
+                    <summary>Learn more</summary>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </p>
+                  </details>
+                </li>
+              </div>
+
+              <li class="skills-bottom-right">
+                <h3>Listening</h3>
+                <p>
+                  Improve your English skills and confidence. Live classes and
+                  interactive lessons online. 20% extra free for a limited time
+                  only
+                </p>
+                <details>
+                  <summary>Learn more</summary>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  </p>
+                </details>
+                <img
+                  src="./images/podcast-audience-bro.png"
+                  alt="People speaking"
+                  width="408"
+                  height="274"
+                />
+              </li>
+            </div>
+          </ul>
+        </div>
       </section>
 
       <section class="section">
