Section Skills fixed

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 class="skills-item-img"
               />
               <h3 class="skills-item-title">Speaking</h3>
-              <p class="skills-item-text">
+              <p class="skills-item-text skills-speaking-text-width">
                 Improve your English skills and confidence. Live classes and
                 interactive lessons online. 20% extra free for a limited time
                 only
@@ -92,8 +92,12 @@
                 language learners.
               </p>
               <details class="skills-detail">
-                <summary>Learn more</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <summary class="skills-detail-summary">Learn more</summary>
+                <p class="skills-detail-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Aspernatur accusamus eaque veritatis incidunt recusandae
+                  voluptatibus porro ab quaerat nam quae!
+                </p>
               </details>
             </li>
 
@@ -105,16 +109,17 @@
                     alt="People typing"
                     width="390"
                     height="264"
+                    class="skills-item-img"
                   />
-                  <h3>Writing</h3>
-                  <p>
+                  <h3 class="skills-item-title">Writing</h3>
+                  <p class="skills-item-text skills-writing-text-width">
                     One of the most important and extensive areas of natural
                     science, the science that studies substances, also their
                     composition
                   </p>
-                  <details>
-                    <summary>Learn more</summary>
-                    <p>
+                  <details class="skills-detail">
+                    <summary class="skills-detail-summary">Learn more</summary>
+                    <p class="skills-detail-text">
                       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     </p>
                   </details>
@@ -125,35 +130,39 @@
                     alt="People reading"
                     width="390"
                     height="390"
+                    class="skills-item-img"
                   />
-                  <h3>Reading</h3>
-                  <p>
-                    Improve your English skills and confidence. Live classes and
-                    interactive lessons online. 20% extra free for a limited
-                    time only
+                  <h3 class="skills-item-title">Reading</h3>
+                  <p class="skills-item-text skills-reading-text-width">
+                    Perception and response actions of the user resulting from
+                    the use and/or upcoming use of the product, system or
+                    service
                   </p>
-                  <details>
-                    <summary>Learn more</summary>
-                    <p>
+                  <details class="skills-detail">
+                    <summary class="skills-detail-summary">Learn more</summary>
+                    <p class="skills-detail-text">
                       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     </p>
                   </details>
                 </li>
               </div>
 
-              <li class="skills-bottom-right">
-                <h3>Listening</h3>
-                <p>
-                  Improve your English skills and confidence. Live classes and
-                  interactive lessons online. 20% extra free for a limited time
-                  only
-                </p>
-                <details>
-                  <summary>Learn more</summary>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              <li class="skills-bottom-right skills-item">
+                <div>
+                  <h3 class="skills-item-title">Listening</h3>
+                  <p class="skills-item-text skills-listening-text-width">
+                    Here you can find activities to practise your listening
+                    skills. Listening will help you to improve your
+                    understanding
                   </p>
-                </details>
+                  <details class="skills-detail">
+                    <summary class="skills-detail-summary">Learn more</summary>
+                    <p class="skills-detail-text">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </p>
+                  </details>
+                </div>
+
                 <img
                   src="./images/podcast-audience-bro.png"
                   alt="People speaking"
