--- a/index.html
+++ b/index.html
@@ -175,35 +175,41 @@
         </div>
       </section>
 
-      <section class="section">
-        <h2>About Us</h2>
-        <p>
-          The model offers a framework for discussing problems related to the
-          user's experience, as well as possible ways and means of solving them.
-          Application development begins at the top level (strategy), where the
-          future software product is described quite abstractly from the point
-          of view of the expectations of both users and the customer.
-        </p>
-        <ul>
-          <li>
-            <h3>800</h3>
-            <p>Pupils</p>
-          </li>
-          <li>
-            <h3>18</h3>
-            <p>Teachers</p>
-          </li>
-          <li>
-            <h3>6</h3>
-            <p>Foreign languages</p>
-          </li>
-        </ul>
-        <img
-          src="./images/business-competition-bro.png"
-          alt="People climb the mountain"
-          width="540"
-          height="540"
-        />
+      <section class="about section">
+        <div class="conteainer">
+          <div class="about-left">
+            <h2 class="about-title">About Us</h2>
+            <p class="about-text">
+              The model offers a framework for discussing problems related to
+              the user's experience, as well as possible ways and means of
+              solving them. Application development begins at the top level
+              (strategy), where the future software product is described quite
+              abstractly from the point of view of the expectations of both
+              users and the customer.
+            </p>
+            <ul class="about-counter-list">
+              <li>
+                <h3 class="counter-item">800</h3>
+                <p class="counter-item-text">Pupils</p>
+              </li>
+              <li>
+                <h3 class="counter-item">18</h3>
+                <p class="counter-item-text">Teachers</p>
+              </li>
+              <li>
+                <h3 class="counter-item">6</h3>
+                <p class="counter-item-text">Foreign languages</p>
+              </li>
+            </ul>
+          </div>
+
+          <img
+            src="./images/business-competition-bro.png"
+            alt="People climb the mountain"
+            width="540"
+            height="540"
+          />
+        </div>
       </section>
 
       <section class="section">
