--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </section>
 
       <section class="about section">
-        <div class="conteainer">
+        <div class="container">
           <div class="about-left">
             <h2 class="about-title">About Us</h2>
             <p class="about-text">
@@ -189,16 +189,16 @@
             </p>
             <ul class="about-counter-list">
               <li>
-                <h3 class="counter-item">800</h3>
+                <h3 class="counter-item-title">800</h3>
                 <p class="counter-item-text">Pupils</p>
               </li>
               <li>
-                <h3 class="counter-item">18</h3>
+                <h3 class="counter-item-title">18</h3>
                 <p class="counter-item-text">Teachers</p>
               </li>
               <li>
-                <h3 class="counter-item">6</h3>
-                <p class="counter-item-text">Foreign languages</p>
+                <h3 class="counter-item-title">6</h3>
+                <p class="counter-item-text">Foreign<br />languages</p>
               </li>
             </ul>
           </div>
