--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
               With our teachers who write a program for each student, you will
               be able to make your first sketch after the first lesson.
             </p>
-            <button type="button" class="hero-button">Get started</button>
+            <button type="button" class="hero-button">
+              <span class="hero-button-name-width">Get started</span>
+            </button>
           </div>
 
           <img
@@ -68,9 +70,10 @@
           />
         </div>
       </section>
+
       <section class="section">
         <div class="container">
-          <h2 class="skills-title">Skills</h2>
+          <h2 class="title-second">Skills</h2>
           <ul class="skills-list">
             <li class="skills-item">
               <img
@@ -80,8 +83,8 @@
                 height="390"
                 class="skills-item-img"
               />
-              <h3 class="skills-item-title">Speaking</h3>
-              <p class="skills-item-text skills-speaking-text-width">
+              <h3 class="title-third">Speaking</h3>
+              <p class="text skills-item-text skills-speaking-text-width">
                 Improve your English skills and confidence. Live classes and
                 interactive lessons online. 20% extra free for a limited time
                 only
@@ -111,8 +114,8 @@
                     height="264"
                     class="skills-item-img"
                   />
-                  <h3 class="skills-item-title">Writing</h3>
-                  <p class="skills-item-text skills-writing-text-width">
+                  <h3 class="title-third">Writing</h3>
+                  <p class="text skills-item-text skills-writing-text-width">
                     One of the most important and extensive areas of natural
                     science, the science that studies substances, also their
                     composition
@@ -132,8 +135,8 @@
                     height="390"
                     class="skills-item-img"
                   />
-                  <h3 class="skills-item-title">Reading</h3>
-                  <p class="skills-item-text skills-reading-text-width">
+                  <h3 class="title-third">Reading</h3>
+                  <p class="text skills-item-text skills-reading-text-width">
                     Perception and response actions of the user resulting from
                     the use and/or upcoming use of the product, system or
                     service
@@ -149,8 +152,8 @@
 
               <li class="skills-bottom-right skills-item">
                 <div>
-                  <h3 class="skills-item-title">Listening</h3>
-                  <p class="skills-item-text skills-listening-text-width">
+                  <h3 class="title-third">Listening</h3>
+                  <p class="text skills-item-text skills-listening-text-width">
                     Here you can find activities to practise your listening
                     skills. Listening will help you to improve your
                     understanding
@@ -178,8 +181,8 @@
       <section class="about section">
         <div class="container">
           <div class="about-left">
-            <h2 class="about-title">About Us</h2>
-            <p class="about-text">
+            <h2 class="about-title title-second">About Us</h2>
+            <p class="text">
               The model offers a framework for discussing problems related to
               the user's experience, as well as possible ways and means of
               solving them. Application development begins at the top level
@@ -190,15 +193,15 @@
             <ul class="about-counter-list">
               <li>
                 <h3 class="counter-item-title">800</h3>
-                <p class="counter-item-text">Pupils</p>
+                <span class="counter-item-text">Pupils</span>
               </li>
               <li>
                 <h3 class="counter-item-title">18</h3>
-                <p class="counter-item-text">Teachers</p>
+                <span class="counter-item-text">Teachers</span>
               </li>
               <li>
                 <h3 class="counter-item-title">6</h3>
-                <p class="counter-item-text">Foreign<br />languages</p>
+                <span class="counter-item-text">Foreign<br />languages</span>
               </li>
             </ul>
           </div>
@@ -213,66 +216,87 @@
       </section>
 
       <section class="section">
-        <h2>Pricing</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/online.png"
-              alt="Online education"
-              width="426"
-              height="320"
-            />
-            <h3>Self-study online course</h3>
-            <p>
-              Start learning English online in live classes with qualified EC
-              teachers and students from all over the world.
-            </p>
-            <span>&#163;5.99</span>
-            <span>per month</span>
-          </li>
-          <li>
-            <img
-              src="./images/lesson.png"
-              alt="Offline lessons"
-              width="426"
-              height="320"
-            />
-            <h3>Live online classes</h3>
-            <p>
-              Interactive group classes with expert teachers. Free 7-day trial
-            </p>
-            <span>&#163;12.99</span>
-            <span>per month</span>
-          </li>
-          <li>
-            <img
-              src="./images/webinar.png"
-              alt="Webinares"
-              width="426"
-              height="320"
-            />
-            <h3>Personal Tuition</h3>
-            <p>
-              Online one-to-one English tutoring – enjoy our first session for
-              only $1
-            </p>
-            <span>&#163;12.99</span>
-            <span>per month</span>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title-second">Pricing</h2>
+          <ul class="price-list">
+            <li class="price-list-item">
+              <img
+                src="./images/online.png"
+                alt="Online education"
+                width="426"
+                height="320"
+              />
+              <h3 class="title-third">Self-study online course</h3>
+              <p class="text">
+                Start learning English online in live classes with qualified EC
+                teachers and students from all over the world.
+              </p>
+              <div class="price-label">
+                <span>&#163;5.99</span>
+                <span class="price-period">per month</span>
+              </div>
+            </li>
+            <li class="price-list-item">
+              <img
+                src="./images/lesson.png"
+                alt="Offline lessons"
+                width="426"
+                height="320"
+              />
+              <h3 class="title-third">Live online classes</h3>
+              <p class="text">
+                Interactive group classes with expert teachers. Free 7-day trial
+              </p>
+              <div class="price-label">
+                <span>&#163;12.99</span>
+                <span class="price-period">per month</span>
+              </div>
+            </li>
+            <li class="price-list-item">
+              <img
+                src="./images/webinar.png"
+                alt="Webinares"
+                width="426"
+                height="320"
+              />
+              <h3 class="title-third">Personal Tuition</h3>
+              <p class="text">
+                Online one-to-one English tutoring – enjoy our first session for
+                only $1
+              </p>
+              <div class="price-label">
+                <span>&#163;12.99</span>
+                <span class="price-period">per month</span>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section">
-        <img src="./images/contact.png" alt="Boy launching a paper plane" />
-        <h2>Contact Us</h2>
-        <p>
-          Discover your current English level by taking our free online English
-          test. Sign up to our newsletter for learning tips and free resources
-        </p>
-        <form action="">
-          <input type="submit" name="e-mail" value="Enter Your E-mail" />
-          <button type="submit">Subscribe</button>
-        </form>
+        <div class="container contact-us">
+          <img src="./images/contact.png" alt="Boy launching a paper plane" />
+          <div>
+            <h2 class="contact-title title-second">Contact Us</h2>
+            <p class="contact-text text">
+              Discover your current English level by taking our free online
+              English test. Sign up to our newsletter for learning tips and free
+              resources
+            </p>
+            <form action="" class="contact-form">
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="Enter Your E-mail"
+                class="contact-input"
+              />
+              <button type="submit" class="submit-button">
+                <span class="submit-button-name">Subscribe</span>
+              </button>
+            </form>
+          </div>
+        </div>
       </section>
     </main>
 
