--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
               With our teachers who write a program for each student, you will
               be able to make your first sketch after the first lesson.
             </p>
-            <button type="button" class="hero-button">
-              <span class="hero-button-name-width">Get started</span>
-            </button>
+            <button type="button" class="hero-button">Get started</button>
           </div>
 
           <img
@@ -291,9 +289,7 @@
                 placeholder="Enter Your E-mail"
                 class="contact-input"
               />
-              <button type="submit" class="submit-button">
-                <span class="submit-button-name">Subscribe</span>
-              </button>
+              <button type="submit" class="submit-button">Subscribe</button>
             </form>
           </div>
         </div>
