--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
       <section class="hero-section">
         <div class="container">
           <div class="hero-left-part">
-            <h1 class="hero-title">
-              Learn <br />
-              Any Foreign <br />
-              Language
-            </h1>
+            <div class="for-shift-icon">
+              <h1 class="hero-title">
+                Learn <br />
+                Any Foreign <br />
+                Language
+              </h1>
+              <div class="icon"></div>
+            </div>
             <p class="hero-text">
               With our teachers who write a program for each student, you will
               be able to make your first sketch after the first lesson.
